# web_resource_watchdog

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: linter_and_tests.yml  push_image_to_dockerhub.yml
infra/: Dockerfile  docker-compose.yaml  flask-entrypoint.sh  nginx.conf.template  worker-entrypoint.sh
migrations/: env.py
migrations/versions/: b7d7664b11f2_.py
requirements/: develop.txt  production.txt
test/: conftest.py  test_config.py
test/test_endpoints/: test_add_resource.py
web_resource_watchdog/: __init__.py  settings.py
web_resource_watchdog/api_views/v1/: __init__.py  resource.py
web_resource_watchdog/error_handlers/: __init__.py  api.py
web_resource_watchdog/errors/: __init__.py  api.py
web_resource_watchdog/factories/: __init__.py  celery_factory.py  flask_app_factory.py  orm_factory.py
web_resource_watchdog/models/: __init__.py  resource.py
web_resource_watchdog/schemas/: resource.py
web_resource_watchdog/tasks/: resource.py
web_resource_watchdog/utils/: zipfile.py
