[tool.poetry]
name = "web-resource-watchdog"
version = "0.1.0"
description = ""
authors = ["Михаил Касаткин <m.m.kasatkin@yandex.ru>"]
readme = "README.md"
packages = [{ include = "web_resource_watchdog" }]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
pydantic = "^2.3.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.0"
black = "^23.7.0"
mixer = "^7.2.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
